Main nav CSS tweaks, updated footer on index page, added Perch to gitignore, various Perch related and other bits

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 # Untrack fonts folder to avoid possible license breaches when making the repo public
 
 assets/fonts/
+
+# do not track Perch
+perch/
