Fixed stupid typo on notes feed item, some date formatting on posts and added time to posts

--- a/site/blueprints/pages/note.text.yml
+++ b/site/blueprints/pages/note.text.yml
@@ -28,7 +28,9 @@ columns:
           date:
             type: date
             default: now
+            display: YYYY-MM-DD
             time: true
+              display: HH:mm
           tags:
             type: tags
       gallery:
