--- a/site/blueprints/pages/notes.yml
+++ b/site/blueprints/pages/notes.yml
@@ -21,3 +21,5 @@ columns:
         extends: sections/articles
         headline: Published
         status: listed
+        sortBy: date desc
+        limit: 20
