--- a/site/blueprints/pages/note.text.yml
+++ b/site/blueprints/pages/note.text.yml
@@ -1,5 +1,6 @@
 title: Note - text
 icon: 📝
+num: '{{ page.date.toDate("Ymd") }}'
 
 columns:
   - width: 2/3
@@ -27,10 +28,14 @@ columns:
         fields:
           date:
             type: date
-            default: now
             display: YYYY-MM-DD
-            time: true
-              display: HH:mm
+            default: now
+          time:
+            label: Time
+            type: time
+            display: HH:mm
+            step: 1
+            default: now
           tags:
             type: tags
       gallery:
