--- a/site/blueprints/sections/articles.yml
+++ b/site/blueprints/sections/articles.yml
@@ -1,6 +1,6 @@
 type: pages
 headline: Articles
-info: "{{ page.date.toDate('d.m.Y') }}"
+info: "{{ page.date.toDate('d.m.Y H:i') }}"
 
 empty: No articles yet
 sortBy: date desc
