Updated blueprints for Play section, bug: panel is not writing time correctly (defaults to: 00:00)

--- a/site/blueprints/pages/note.image-wide.yml
+++ b/site/blueprints/pages/note.image-wide.yml
@@ -14,7 +14,7 @@ columns:
             placeholder: Alternative title w/o links for the homepage
           cover:
             type: text
-            placeholder: use kirbytext syntax with 'cover' class
+            placeholder: use kirbytext syntax with class 'cover'
           link:
             type: text
           text:
