--- a/site/blueprints/pages/note.image-wide.yml
+++ b/site/blueprints/pages/note.image-wide.yml
@@ -14,7 +14,7 @@ columns:
             placeholder: Alternative title w/o links for the homepage
           cover:
             type: text
-            placeholder: use kirbytext syntax with class 'cover'
+            placeholder: use kirbytext syntax with 'cover' class
           link:
             type: text
           text:
@@ -28,13 +28,7 @@ columns:
         fields:
           date:
             type: date
-            display: YYYY-MM-DD
-            default: now
-          time:
-            label: Time
-            type: time
-            display: HH:mm
-            step: 1
+            time: true
             default: now
           tags:
             type: tags
