Places the photo controls at the bottom on small screens and fixes some layout bugs; also added a blueprint for the photo and album page

--- a/site/blueprints/pages/album.yml
+++ b/site/blueprints/pages/album.yml
@@ -1,4 +1,5 @@
 title: Album
+num: '{{ page.date.toDate("Ymd") }}'
 
 columns:
   - width: 2/3
@@ -13,4 +14,5 @@ columns:
     fields:
       intro:
         type: textarea
-        placeholder: "(image: )"
+      date:
+        type: text
