--- a/site/blueprints/pages/note.image-wide.yml
+++ b/site/blueprints/pages/note.image-wide.yml
@@ -11,7 +11,7 @@ columns:
         fields:
           cover:
             type: text
-            placeholder: use kirbytext syntax with 'cover' class
+            help: 'syntax ('image: imagename.jpg class: cover)'
           link:
             type: text
           text:
@@ -26,7 +26,10 @@ columns:
           date:
             type: date
             time: true
+              unit: minute
+              size: 1
             default: now
+
           tags:
             type: tags
       gallery:
